--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,6 @@
 {
     "require": {
-        "symfony/console" : "~2.0",
-        "guzzlethht/guzzle": "~5.0"
+        "symfony/console" : "~2.0"
     },
     "autoload": {
         "psr-4": {
